crates/pg_syntax/tests/snapshots/postgres_regress/truncate@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE trunc_e (a int REFERENCES truncate_a, b int REFERENCES trunc_c);"
---
CreateStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "trunc_e"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ColumnDef@22..49
    Ident@22..23 "a"
    Whitespace@23..24 " "
    TypeName@24..27
      IntP@24..27 "int"
    Whitespace@27..28 " "
    Constraint@28..49
      References@28..38 "REFERENCES"
      Whitespace@38..39 " "
      RangeVar@39..49
        Ident@39..49 "truncate_a"
  Ascii44@49..50 ","
  Whitespace@50..51 " "
  ColumnDef@51..75
    Ident@51..52 "b"
    Whitespace@52..53 " "
    TypeName@53..56
      IntP@53..56 "int"
    Whitespace@56..57 " "
    Constraint@57..75
      References@57..67 "REFERENCES"
      Whitespace@67..68 " "
      RangeVar@68..75
        Ident@68..75 "trunc_c"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

