crates/pg_syntax/tests/snapshots/postgres_regress/truncate@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE truncpart_2_d PARTITION OF truncpart_2 DEFAULT;
---
CreateStmt@0..60
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "truncpart_2_d"
  Whitespace@26..27 " "
  Partition@27..36 "PARTITION"
  Whitespace@36..37 " "
  Of@37..39 "OF"
  Whitespace@39..40 " "
  RangeVar@40..51
    Ident@40..51 "truncpart_2"
  Whitespace@51..52 " "
  PartitionBoundSpec@52..59
    Default@52..59 "DEFAULT"
  Ascii59@59..60 ";"

