crates/pg_syntax/tests/snapshots/postgres_regress/truncate@161.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE truncprim;
---
TruncateStmt@0..25
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..24
    Ident@15..24 "truncprim"
  Ascii59@24..25 ";"

