crates/pg_syntax/tests/snapshots/postgres_regress/truncate@167.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM tp_chk_data();
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..25
    List@14..25
      FuncCall@14..25
        Ident@14..25 "tp_chk_data"
  Ascii40@25..26 "("
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

