crates/pg_syntax/tests/snapshots/postgres_regress/truncate@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE truncate_a;
---
TruncateStmt@0..26
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..25
    Ident@15..25 "truncate_a"
  Ascii59@25..26 ";"

