crates/pg_syntax/tests/snapshots/postgres_regress/truncate@177.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE trunc_a22 PARTITION OF trunc_a2 FOR VALUES FROM (12) TO (16);
---
CreateStmt@0..74
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "trunc_a22"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..44
    Ident@36..44 "trunc_a2"
  Whitespace@44..45 " "
  For@45..48 "FOR"
  Whitespace@48..49 " "
  Values@49..55 "VALUES"
  Whitespace@55..56 " "
  PartitionBoundSpec@56..72
    From@56..60 "FROM"
    Whitespace@60..61 " "
    Ascii40@61..62 "("
    AConst@62..64
      Iconst@62..64 "12"
    Ascii41@64..65 ")"
    Whitespace@65..66 " "
    To@66..68 "TO"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..72
      Iconst@70..72 "16"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

